avoid long lines, new function linechars

--- a/vignettes/cache.Rmd
+++ b/vignettes/cache.Rmd
@@ -7,9 +7,11 @@ vignette: >
 ---
 
 
-The `cache` collection of functions streamlines use of save() and load() to manage objects during scripting. 
+The `cache` collection of functions streamlines use of save() and load() to
+manage objects during scripting. 
 
-Unlike other vignettes in the package that demonstrate functions in a category in order, this vignette demonstrates some use cases.
+Unlike other vignettes in the package that demonstrate functions in a category
+in order, this vignette demonstrates some use cases.
 
 ```{r, echo=FALSE}
 library(shrt)
@@ -20,7 +22,10 @@ library(shrt)
 
 ## Setting up a disk cache
 
-A disk cache is a location on disk that holds computed objects so that they can be retrieved without requiring recomputing from scratch. The default location of the cache is the working directory and can be retrieved busing the function`cachedir()` without arguments,
+A disk cache is a location on disk that holds computed objects so that they
+can be retrieved without requiring recomputing from scratch. The default
+location of the cache is the working directory and can be retrieved busing
+the function`cachedir()` without arguments,
 
 ```{r}
 cachedir()
@@ -60,14 +65,16 @@ abc = letters[1:3]
 abc
 ```
 
-Saving and loading this object from disk can be performed using `save`, `load`, and old files can be removed by `file.remove`.
+Saving and loading this object from disk can be performed using `save`, `load`,
+and old files can be removed by `file.remove`.
 
 ```{r}
 abc.file = file.path("cachedata", "abc.Rda")
 save(abc, file=abc.file)
 ```
 
-At this point, the object exists on disk. It is possible to remove it from the working environment, and reload it from disk,
+At this point, the object exists on disk. It is possible to remove it from the
+working environment, and reload it from disk,
 
 ```{r}
 rm(abc)
@@ -75,7 +82,8 @@ load(abc.file)
 abc
 ```
 
-With the `shrt` cache-management, saving and re-loading can be simpliefied via functions `savec` and `loadc`, 
+With the `shrt` cache-management, saving and re-loading can be simpliefied via
+functions `savec` and `loadc`, 
 
 ```{r}
 savec(abc)
@@ -84,13 +92,17 @@ abc = loadc("abc")
 abc
 ```
 
-The file path need not be constructed or specified, but it can be retrieved if necessary using `cachefile`,
+The file path need not be constructed or specified, but it can be retrieved if
+necessary using `cachefile`,
 
 ```{r}
 cachefile("abc")
 ```
 
-In the above example, using `loadc` requires assigning the value of the object into a variable. This may be useful to explicitly use a different object name. The package also provides an alternative function `assignc` that loads from cache and performs the assignment in one go.
+In the above example, using `loadc` requires assigning the value of the object
+into a variable. This may be useful to explicitly use a different object name.
+The package also provides an alternative function `assignc` that loads from
+cache and performs the assignment in one go.
 
 ```{r}
 rm(abc)
@@ -98,7 +110,8 @@ assignc("abc")
 abc
 ```
 
-When the object is no longer needed, it can be removed from the environment using `rm` or from botth the environment and cache using `rmc`.
+When the object is no longer needed, it can be removed from the environment
+using `rm` or from botth the environment and cache using `rmc`.
 
 ```{r}
 before = file.exists(cachefile("abc"))
@@ -107,14 +120,17 @@ after = file.exists(cachefile("abc"))
 c(before, after)
 ```
 
-Again, the interface to `rmc` requires specifying the object, but not the file path in cache.
+Again, the interface to `rmc` requires specifying the object, but not the file
+path in cache.
 
 
 
 
 ## Pipelines with cache
 
-Cached objects can be useful to speed-up a long-running script or pipeline. Functions `assignc` and `makec` provide tools for this purpose. For this use case, consider generating an object using a function.
+Cached objects can be useful to speed-up a long-running script or pipeline.
+Functions `assignc` and `makec` provide tools for this purpose. For this use
+case, consider generating an object using a function.
 
 ```{r}
 myfun = function(x, rev=TRUE) {
@@ -128,7 +144,8 @@ fwd5 = myfun(5)
 fwd5
 ```
 
-Within a pipeline, there might be a module to compute `fwd5` that loads it from disk when available, or compute it and save it otherwise.
+Within a pipeline, there might be a module to compute `fwd5` that loads it
+from disk when available, or compute it and save it otherwise.
 
 ```{r}
 ## base R
@@ -142,9 +159,13 @@ if (!file.exists(fwd5.file)) {
 fwd5
 ```
 
-The snippet always ends with a representation of `fwd5`. This is explicit in the two statements begining with `fwd5 =` along the two branches of the `if`-`else` block.
+The snippet always ends with a representation of `fwd5`. This is explicit in
+the two statements begining with `fwd5 =` along the two branches of the
+`if`-`else` block.
 
-An alternative implementation exploits the capability of `assignc` to report whether or not a cache representation exists in a manner that is consistent with an `if` statement.
+An alternative implementation exploits the capability of `assignc` to report
+whether or not a cache representation exists in a manner that is consistent
+with an `if` statement.
 
 ```{r}
 ## shrt v.1
@@ -155,17 +176,23 @@ if (!assignc("fwd5")) {
 fwd5
 ```
 
-Here, when the object exists in cache, `fwd` obtains a value through a side-effect of `assignc`. When the cached file does not exist, the object is computed and saved within the `if` block.
+Here, when the object exists in cache, `fwd` obtains a value through a
+side-effect of `assignc`. When the cached file does not exist, the object is
+computed and saved within the `if` block.
 
-Although this is simpler than the original version, it still requires a manual call to `savec` to record the object in cache. It is possible to avoid that using `makec`. This function requires the name of the target object and a generator function; it performs all the cache maintenance automatically.
+Although this is simpler than the original version, it still requires a manual
+call to `savec` to record the object in cache. It is possible to avoid that
+using `makec`. This function requires the name of the target object and a
+generator function; it performs all the cache maintenance automatically.
 
 ```{r}
-## shrt v.2
+# shrt v.2
 makec("fwd5", myfun, 5)
 fwd5
 ```
 
-The generator can take more than one argument. For example, to generate the reverse sequence taking advantage of `myfun`'s optional second argument,
+The generator can take more than one argument. For example, to generate the
+reverse sequence taking advantage of `myfun`'s optional second argument,
 
 ```{r}
 makec("rev5", myfun, 5, rev=TRUE)
@@ -177,14 +204,16 @@ rev5
 
 ## Logging
 
-By default, function `assignc` does not produce any log messages. Thus, the following snippet is silent.
+By default, function `assignc` does not produce any log messages. Thus, the
+following snippet is silent.
 
 ```{r}
 abc = 5
-assignc("abc")
+    assignc("abc")
 ```
 
-It is possible to activate messages by setting a verbosity level greater than 1.
+It is possible to activate messages by setting a verbosity level greater
+than 1.
 
 ```{r}
 verbose = 2
@@ -203,13 +232,13 @@ assignc("abc")
 
 ## Notes
 
-It is worth stressing that `assignc` and `makec` perform different actions depending on the state of the current environment. The default order of preference is as follows:
+It is worth stressing that `assignc` and `makec` perform different actions
+depending on the state of the current environment. The default order of
+preference is as follows:
 
  - do not modify the environment if object already exists
  - load an object from cache file
- - compute object using a constructor function (`makec`), or abort (`assignc`)
-
-
+ - compute object using a constructor (`makec`), or abort (`assignc`)
 
 
 
