--- a/vignettes/projects.Rmd
+++ b/vignettes/projects.Rmd
@@ -27,7 +27,8 @@ wp = initp("MyProjects")
 
 The returned object is a simple list with all the directories.
 
-Note that the messages displayed by `initp` are output via function `msg`. This means they are logged and can be retrieved
+Note that the messages displayed by `initp` are output via function `msg`.
+This means they are logged and can be retrieved
 
 ```{r}
 msg(action="show")
@@ -53,6 +54,9 @@ a4 = 0
 reqvars(c("a1", "a2", "a3", "a4"))
 ```
 
-The call prints out messages about variable names that are expected, but not defined. When there are missing variables in the environment, the default action is to call `stop()`. (Argument `halt` can be set to `FALSE` to prevent this behavior.)
+The call prints out messages about variable names that are expected, but
+not defined. When there are missing variables in the environment, the
+default action is to call `stop()`. (Argument `halt` can be set to `FALSE`
+to prevent this behavior.)
 
 
